Mapping errors good management of Streams